--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Link Preview</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Link Preview</h1>
+        <div class="input-group">
+            <input type="text" id="urlInput" placeholder="Paste the link here">
+            <button onclick="fetchDetails()">Fetch Details</button>
+        </div>
+        <div id="itemDetails" class="item-details"></div>
+    </div>
 
+    <script>
+        async function fetchDetails() {
+            const url = document.getElementById('urlInput').value;
+
+            // Simulate fetching details
+            const details = await getDetailsFromUrl(url);
+            displayDetails(details);
+        }
+
+        async function getDetailsFromUrl(url) {
+            // Placeholder for actual fetching logic
+            // Here you can add your logic to fetch details from the URL
+            // For now, we return mock data
+            return {
+                title: "Sample Item",
+                image: "https://via.placeholder.com/150",
+                description: "This is a sample item description."
+            };
+        }
+
+        function displayDetails(details) {
+            const itemDetails = document.getElementById('itemDetails');
+            itemDetails.innerHTML = `
+                <h2>${details.title}</h2>
+                <img src="${details.image}" alt="${details.title}">
+                <p>${details.description}</p>
+            `;
+        }
+    </script>
+</body>
+</html>
