--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Previewer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,7 @@
             const urlInput = document.getElementById('urlInput');
             const url = urlInput.value.trim();
             if (!url) return;
-            
+
             const details = {
                 url: url,
                 title: "Sample Item",
