--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Previewer</title>
+    <title>Weed Link Previewer</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Link Previewer</h1>
+        <h1>Weed Link Previewer</h1>
         <div class="input-group">
             <input type="text" id="urlInput" placeholder="Paste the link here">
             <button onclick="addLink()">Add Link</button>
@@ -28,9 +28,9 @@
 
             const details = {
                 url: url,
-                title: "Sample Item",
+                title: "Sample Weed Item",
                 image: "https://via.placeholder.com/150",
-                description: "This is a sample item description."
+                description: "This is a sample description of a weed product."
             };
 
             saveLink(details);
