--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weed Link Previewer</title>
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -26,9 +27,10 @@
             const url = urlInput.value.trim();
             if (!url) return;
 
+            // Mocking fetching details from a URL
             const details = {
                 url: url,
-                title: "Sample Weed Item",
+                title: "Weed Product",
                 image: "https://via.placeholder.com/150",
                 description: "This is a sample description of a weed product."
             };
@@ -54,10 +56,14 @@
             const linkItem = document.createElement('div');
             linkItem.className = 'link-item';
             linkItem.innerHTML = `
-                <h2>${details.title}</h2>
-                <img src="${details.image}" alt="${details.title}">
-                <p>${details.description}</p>
-                <a href="${details.url}" target="_blank">Visit</a>
+                <div class="link-image">
+                    <img src="${details.image}" alt="${details.title}">
+                </div>
+                <div class="link-details">
+                    <h2>${details.title}</h2>
+                    <p>${details.description}</p>
+                    <a href="${details.url}" target="_blank">Visit</a>
+                </div>
             `;
             linkList.appendChild(linkItem);
         }
