--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weed Link Previewer</h1>
+        <h1>🌿 Weed Link Previewer 🌿</h1>
         <div class="input-group">
             <input type="text" id="urlInput" placeholder="Paste the link here">
             <button onclick="addLink()">Add Link</button>
